# voiceboard

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD.md  CLAUDE.md  Cargo.toml  EXAMPLES.md  FAQ.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  ROADMAP.md  VIRTUAL_AUDIO_SETUP.md  angular.json  config.toml  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: API.md  AUDIO_PIPELINE.md  DEVELOPMENT.md  VIRTUAL_DEVICE.md
docs/plans/: 2025-12-25-sound-preview-design.md  2025-12-25-sound-preview-implementation.md  2025-12-26-release-build-design.md  2025-12-26-release-build-implementation.md  2025-12-26-remote-control-design.md  2025-12-27-rust-tests-design.md  2025-12-27-vu-meters-implementation.md
docs/plans/archive/: 2025-12-27-sentry-integration.md  2025-12-27-vu-meters-design.md
docs/plans/completed/: 2025-12-26-ci-testing-design.md  2025-12-26-ci-testing-implementation.md  2025-12-27-auto-update-design.md
src/: main.rs  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/adapters/: cpal_device_manager.rs  cpal_input.rs  cpal_output.rs  mod.rs  rodio_decoder.rs  windows_virtual_output.rs
src-tauri/src/application/: audio_engine.rs  commands.rs  mod.rs  preview_engine.rs  services.rs  state.rs
src-tauri/src/audio/: capture.rs  decoder.rs  engine.rs  mixer.rs  mod.rs  playback.rs  resampler.rs  types.rs  virtual_device.rs
src-tauri/src/commands/: audio.rs  devices.rs  mod.rs  soundboard.rs
src-tauri/src/config/: manager.rs  mod.rs  types.rs
src-tauri/src/devices/: manager.rs  mod.rs  types.rs
src-tauri/src/domain/: mod.rs  settings.rs
src-tauri/src/domain/audio/: buffer.rs  format.rs  mod.rs  sample.rs
src-tauri/src/domain/device/: audio_device.rs  mod.rs
src-tauri/src/domain/mixer/: channel.rs  mixer_config.rs  mod.rs
src-tauri/src/infrastructure/: logging.rs  mod.rs  sentry.rs
src-tauri/src/ports/: audio_input.rs  audio_output.rs  device_manager.rs  file_decoder.rs  mod.rs
src-tauri/src/soundboard/: manager.rs  mod.rs  sound.rs  storage.rs
src-ui/: angular.json  package.json
src-ui/src/: index.html  styles.scss
src-ui/src/app/: app.component.html  app.component.scss  app.component.ts  app.routes.ts
src-ui/src/app/components/soundboard/: soundboard.component.html  soundboard.component.scss  soundboard.component.ts
src-ui/src/app/models/: audio-device.model.ts  audio-level.model.ts  settings.model.ts  sound.model.ts
src-ui/src/app/services/: audio-device.service.ts  audio-engine.service.ts  soundboard.service.ts  tauri.service.ts
src/app/: app.component.ts  app.config.ts
src/app/core/components/debug-console/: debug-console.component.ts
src/app/core/components/toast/: toast.component.ts
src/app/core/models/: audio-device.model.ts  index.ts
src/app/core/services/: debug-console.service.ts  index.ts  mixer.service.ts  soundboard.service.ts  tauri.service.ts  toast.service.ts
src/app/features/devices/: device-selector.component.ts
src/app/features/mixer/: mixer.component.ts
src/app/features/mixer/channel-strip/: channel-strip.component.ts
src/app/features/mixer/level-meters/: level-meters.component.ts
src/app/features/mixer/master-control/: master-control.component.ts
src/app/features/soundboard/: soundboard.component.ts
src/app/features/soundboard/sound-pad/: sound-pad.component.ts
src/audio/: capture.rs  mod.rs  renderer.rs
src/config/: mod.rs
src/dsp/: distortion.rs  formant_shifter.rs  mod.rs  pitch_shifter.rs  reverb.rs  robot_effect.rs
