[package]
name = "voiceboard"
version = "0.1.0"
description = "A Windows soundboard application with virtual microphone support"
authors = ["Your Name"]
license = "MIT"
repository = "https://github.com/yourusername/voiceboard"
edition = "2021"

# Optimize for smaller binary size and better performance
[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"

# Audio processing
cpal = "0.15"                          # Cross-platform audio I/O (WASAPI wrapper)
symphonia = { version = "0.5", features = [
    "all",                             # All audio format support
    "mp3",                             # MP3 decoding
    "wav",                             # WAV support
    "flac",                            # FLAC support
    "vorbis",                          # OGG Vorbis support
    "aac",                             # AAC support
] }
rubato = "0.15"                        # High-quality audio resampling
ringbuf = "0.4"                        # Lock-free ring buffers for audio threads
dasp = "0.11"                          # Digital audio signal processing

# Windows-specific audio
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_DirectSound",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Security",
    "Media_Core",
] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }

# Database and persistence
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
] }

# Error handling and logging
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"                   # Faster synchronization primitives
crossbeam = "0.8"                      # Lock-free data structures

[features]
# Enable development features
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Optional features for future enhancements
hotkeys = []                           # Global hotkey support
vst-support = []                       # VST plugin hosting
